HW1/javali_tests/HW1/ImmediateOperands.javali.err
Debug information for file: javali_tests/HW1/ImmediateOperands.javali
AST Resulting From Parsing Stage:
ClassDecl (name: Main, superClass: Object)
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | | VarDecl (name: i0, type: int)
| | Seq ()
| | | Assign ()
| | | | Var (name: i0)
| | | | IntConst (value: 0)
| | | Assign ()
| | | | Var (name: i0)
| | | | BinaryOp (operator: B_PLUS)
| | | | | IntConst (value: 5)
| | | | | Var (name: i0)
| | | BuiltInWrite ()
| | | | Var (name: i0)
| | | BuiltInWriteln ()
| | | Assign ()
| | | | Var (name: i0)
| | | | BinaryOp (operator: B_PLUS)
| | | | | Var (name: i0)
| | | | | IntConst (value: 5)
| | | BuiltInWrite ()
| | | | Var (name: i0)
| | | BuiltInWriteln ()
| | | Assign ()
| | | | Var (name: i0)
| | | | BinaryOp (operator: B_PLUS)
| | | | | BinaryOp (operator: B_PLUS)
| | | | | | Var (name: i0)
| | | | | | IntConst (value: 5)
| | | | | IntConst (value: 3)
| | | BuiltInWrite ()
| | | | Var (name: i0)
| | | BuiltInWriteln ()

Test failed because an exception was thrown:
    Executing assembler failed.
Output:
Undefined symbols for architecture i386:
  "_main", referenced from:
     implicit entry/start for main executable
  "i0", referenced from:
      anon in ImmediateOperands-0f78f5.o
ld: symbol(s) not found for architecture i386
clang: error: linker command failed with exit code 1 (use -v to see invocation)

Stack trace:
cd.backend.codegen.AssemblyFailedException: Executing assembler failed.
Output:
Undefined symbols for architecture i386:
  "_main", referenced from:
     implicit entry/start for main executable
  "i0", referenced from:
      anon in ImmediateOperands-0f78f5.o
ld: symbol(s) not found for architecture i386
clang: error: linker command failed with exit code 1 (use -v to see invocation)

	at cd.test.AbstractTestAgainstFrozenReference.testCodeGenerator(AbstractTestAgainstFrozenReference.java:160)
	at cd.test.AbstractTestAgainstFrozenReference.test(AbstractTestAgainstFrozenReference.java:51)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:498)
	at org.junit.runners.model.FrameworkMethod$1.runReflectiveCall(FrameworkMethod.java:50)
	at org.junit.internal.runners.model.ReflectiveCallable.run(ReflectiveCallable.java:12)
	at org.junit.runners.model.FrameworkMethod.invokeExplosively(FrameworkMethod.java:47)
	at org.junit.internal.runners.statements.InvokeMethod.evaluate(InvokeMethod.java:17)
	at org.junit.internal.runners.statements.FailOnTimeout$CallableStatement.call(FailOnTimeout.java:298)
	at org.junit.internal.runners.statements.FailOnTimeout$CallableStatement.call(FailOnTimeout.java:292)
	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
	at java.lang.Thread.run(Thread.java:745)
